--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ notebook.ipynb
 *.pt
 models
 decoder.py
+0a1baaa8-4556-4e07-a486-599c05cce76c.jpg
+ping.py
 
 
 # Byte-compiled / optimized / DLL files
